test/src/e2e_vm_tests/test_programs/should_fail/associated_type_not_in_trait/src/main.sw
script;
trait Trait{}
struct Struct0{}
impl Trait for Struct0{type u;const u:u64=0;}